--- a/index.html
+++ b/index.html
@@ -6,106 +6,150 @@
     <title>Ny Resume</title>
   </head>
   <body>
-    <nav>
-      <a href="#Contact details">Contact information</a>
-      <a href="#education">Education </a>
-      <a href="#intership">Intership </a>
-      <a href="#project">Projects</a>
-    </nav>
-    <br /><br />
-    <table>
-      <tr>
-        <td>
-          <img
-            width="200"
-            src="iamge\my photo.jpg"
-            alt="Harshvardhan Patidar image"
-          />
-        </td>
-        <td>
-          <h1><b>HarshvardhanPatidar</b></h1>
-          <p>
-            Founder of many
-            <a target="_blank" href="https://www.google.com">websites </a> and
-            software engineer
-          </p>
-          <p>I love web development and here to make an resume usming HTML</p>
-        </td>
-      </tr>
-    </table>
-    <hr />
-    <h2 id="education">Education</h2>
-    <table border="">
-      <tr>
-        <th>Course</th>
-        <th>Institute</th>
-        <th>Year</th>
-        <th>Result</th>
-      </tr>
-      <tr>
-        <td>Mtech-IT</td>
-        <td>DAVV,Indore</td>
-        <td>2022</td>
-        <td>75%</td>
-      </tr>
-      <tr>
-        <td>12<sup>th</sup>Grade</td>
-        <td>Shri Sai Academy,Mhow</td>
-        <td>2021</td>
-        <td>73.5%</td>
-      </tr>
-    </table>
-    <h2 id="intership">Internships</h2>
-    <p>Intership in <strong>Indore Muncipal Corparation</strong> with mayor</p>
-    <p><i>Role is software engineer and website handler</i></p>
-    <ul>
-      <li>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit deleniti
-        sapiente id beatae. Ex suscipit corrupti dolor labore laborum nihil
-        quaerat quibusdam sapiente aliquid earum, harum totam tenetur fugit
-        cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Architecto corporis odit perspiciatis exercitationem ea. Numquam
-        doloremque quas reprehenderit nesciunt animi?
-      </li>
-      <li>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti
-        cumque accusantium blanditiis quas, ad dolorem quam earum nihil quisquam
-        reprehenderit.
-      </li>
-    </ul>
-    <h2 id="project">Projects</h2>
-    <ul>
-      <li><b>Coder</b></li>
-      <br />
+    <header>
+      <nav>
+        <a href="#Contact details">Contact Me</a>
+        <a href="#education">Education </a>
+        <a href="#intership">Intership </a>
+        <a href="#project">Projects</a>
+        <a href="#Experience">Experience</a>
+        <a href="#C/L">Leadership</a>
+      </nav>
+      <br /><br />
+      <table>
+        <tr>
+          <td>
+            <img
+              width="200"
+              src="https://avatars.githubusercontent.com/u/143065552?v=4"
+              alt="Harshvardhan Patidar image"
+            />
+          </td>
+          <td>
+            <h1><b>Harshvardhan Patidar</b></h1>
+            <p>
+              Founder of many
+              <a target="_blank" href="https://www.google.com">websites </a> and
+              software engineer
+            </p>
+            <p>
+              A motivated, adaptable and responsible computer user seeking a
+              position in an IT career whic will utilize the professional and
+              techical skills developed. Customer-focused approach to work and
+              strong drive to see things through completion.
+            </p>
+          </td>
+        </tr>
+      </table>
+      <hr />
+    </header>
+    <section id="education">
+      <h2>Education</h2>
+      <table border="">
+        <tr>
+          <th>Course</th>
+          <th>Institute</th>
+          <th>Year</th>
+          <th>Result</th>
+        </tr>
+        <tr>
+          <td>Mtech-IT</td>
+          <td>DAVV,Indore</td>
+          <td>2022</td>
+          <td>75%</td>
+        </tr>
+        <tr>
+          <td>12<sup>th</sup>Grade</td>
+          <td>Shri Sai Academy,Mhow</td>
+          <td>2021</td>
+          <td>73.5%</td>
+        </tr>
+        <tr>
+          <td>10<sup>th</sup>Grade</td>
+          <td>Shri Sai Academy,Mhow</td>
+          <td>2019</td>
+          <td>75%</td>
+        </tr>
+      </table>
+    </section>
+    <section id="Experience">
+      <h2>Experience</h2>
+      <p>[2020]-[2022]</p>
+      <p>Teaching Chemistry Teacher Home tuition</p>
+      <ul>
+        <li>Keeping up to date with the latest technologies information.</li>
+        <li>In school play a role of captain in cricket</li>
+        <li>Great experience of the world(Travel many places of India)</li>
+        <li>Great experiance of trading</li>
+      </ul>
+    </section>
+    <section id="intership">
+      <h2>Internships</h2>
+      <p>
+        Intership in <strong>Indore Muncipal Corparation</strong> with mayor
+      </p>
+      <p><i>Role is software engineer and website handler</i></p>
       <ul>
         <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laudantium
-          ipsa, quos et, culpa neque nobis error nihil voluptates iure dolorum
-          ea nostrum recusandae suscipit? Cupiditate libero consectetur illum
-          omnis, accusamus est, deleniti labore saepe quia, harum assumenda amet
-          provident.
+          One of the great experence in IMC with mayor sir. I learn many thing
+          which change my mind-set fully.
         </li>
         <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, amet
-          quas. Unde ratione odit accusantium quaerat minus sit aperiam,
-          doloremque ea dolore rem, consequuntur dignissimos repudiandae et
-          fuga. Dignissimos, distinctio.
+          I will saw the IT cell there and the entire work of indore is done
+          from there, which a grear pleasure in itself.
         </li>
       </ul>
-      <br />
-      <li><b>Developer</b></li>
+    </section>
+    <section id="project">
+      <h2>Projects/Skills</h2>
+      <ul>
+        <li><b>Coder</b></li>
+        <p><i>I love coding</i></p>
+        <ul>
+          <li>
+            Expert in many language like C programming, C++, Python and HTML.
+          </li>
+          <li>
+            I have learned many computer programming language, with the help of
+            which I have made many projects and in whatever language I learn, I
+            definitely make a big project, although I like Python language.
+          </li>
+        </ul>
+        <br />
+        <li><b>Developer</b></li>
+        <p>
+          <i>I will develped many project</i>
+        </p>
+        <ul>
+          <li>
+            <p>
+              Some of my project our in differnt languages is: C, C++, Python &
+              HTML
+            </p>
+          </li>
+        </ul>
+      </ul>
+    </section>
+    <section id="C/L">
+      <h2>Communication/Leadership</h2>
+      <ul>
+        <li>Knowing the English and Hindi language</li>
+        <li>
+          In sports like cricket, badminton, drawing, volleyball, kabaddi(And
+          all perfect in various sports).
+        </li>
+        <li>As a sport person, perfect as a leader</li>
+      </ul>
+      <hr />
+    </section>
+    <footer>
+      <h3 id="Contact details">Contact Details</h3>
+      <p><i>For more information contact me through any option</i></p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis aliquid
-        beatae aut harum minima quas vel debitis voluptate laborum sit sed
-        delectus, unde officiis blanditiis? Laudantium repellat laborum
-        inventore ad laboriosam dolorem facilis quaerat impedit?
+        <b>Email:- </b
+        ><a href="mailto:harshp18@gmail.com">harshp18@gmail.com</a>
       </p>
-    </ul>
-    <hr />
-    <h3 id="Contact details">Contact Details</h3>
-    <p>
-      <b>Email:- </b><a href="mailto:harshp18@gmail.com">harshp18@gmail.com</a>
-    </p>
-    <p><b>Intagram:- </b> patidarharsh18</p>
+      <p><b>Intagram:- </b> patidarharsh18</p>
+    </footer>
   </body>
 </html>
