--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ny Resume</title>
+    <link rel="stylesheet" href="myresume.css" />
+    <link rel="shortcut icon" href="iamge\favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -16,132 +18,131 @@
         <a href="#C/L">Leadership</a>
       </nav>
       <br /><br />
-      <table>
-        <tr>
-          <td>
-            <img
-              width="200"
-              src="https://avatars.githubusercontent.com/u/143065552?v=4"
-              alt="Harshvardhan Patidar image"
-            />
-          </td>
-          <td>
-            <h1><b>Harshvardhan Patidar</b></h1>
-            <p>
-              Founder of many
-              <a target="_blank" href="https://www.google.com">websites </a> and
-              software engineer
-            </p>
-            <p>
-              A motivated, adaptable and responsible computer user seeking a
-              position in an IT career whic will utilize the professional and
-              techical skills developed. Customer-focused approach to work and
-              strong drive to see things through completion.
-            </p>
-          </td>
-        </tr>
-      </table>
-      <hr />
+      <img
+        class="img"
+        width="200"
+        src="https://avatars.githubusercontent.com/u/143065552?v=4"
+        alt="Harshvardhan Patidar image"
+      />
     </header>
-    <section id="education">
-      <h2>Education</h2>
-      <table border="">
-        <tr>
-          <th>Course</th>
-          <th>Institute</th>
-          <th>Year</th>
-          <th>Result</th>
-        </tr>
-        <tr>
-          <td>Mtech-IT</td>
-          <td>DAVV,Indore</td>
-          <td>2022</td>
-          <td>75%</td>
-        </tr>
-        <tr>
-          <td>12<sup>th</sup>Grade</td>
-          <td>Shri Sai Academy,Mhow</td>
-          <td>2021</td>
-          <td>73.5%</td>
-        </tr>
-        <tr>
-          <td>10<sup>th</sup>Grade</td>
-          <td>Shri Sai Academy,Mhow</td>
-          <td>2019</td>
-          <td>75%</td>
-        </tr>
-      </table>
-    </section>
-    <section id="Experience">
-      <h2>Experience</h2>
-      <p>[2020]-[2022]</p>
-      <p>Teaching Chemistry Teacher Home tuition</p>
-      <ul>
-        <li>Keeping up to date with the latest technologies information.</li>
-        <li>In school play a role of captain in cricket</li>
-        <li>Great experience of the world(Travel many places of India)</li>
-        <li>Great experiance of trading</li>
-      </ul>
-    </section>
-    <section id="intership">
-      <h2>Internships</h2>
-      <p>
-        Intership in <strong>Indore Muncipal Corparation</strong> with mayor
-      </p>
-      <p><i>Role is software engineer and website handler</i></p>
-      <ul>
-        <li>
-          One of the great experence in IMC with mayor sir. I learn many thing
-          which change my mind-set fully.
-        </li>
-        <li>
-          I will saw the IT cell there and the entire work of indore is done
-          from there, which a grear pleasure in itself.
-        </li>
-      </ul>
-    </section>
-    <section id="project">
-      <h2>Projects/Skills</h2>
-      <ul>
-        <li><b>Coder</b></li>
-        <p><i>I love coding</i></p>
-        <ul>
-          <li>
-            Expert in many language like C programming, C++, Python and HTML.
-          </li>
-          <li>
-            I have learned many computer programming language, with the help of
-            which I have made many projects and in whatever language I learn, I
-            definitely make a big project, although I like Python language.
-          </li>
-        </ul>
-        <br />
-        <li><b>Developer</b></li>
+    <main>
+      <article>
+        <h1 class="border"><b>Harshvardhan Patidar</b></h1>
         <p>
-          <i>I will develped many project</i>
+          <i
+            >Founder of many
+            <a target="_blank" href="https://www.google.com">websites </a> and
+            software engineer</i
+          >
         </p>
+        <p>
+          A motivated, adaptable and responsible computer user seeking a
+          position in an IT career whic will utilize the professional and
+          techical skills developed. Customer-focused approach to work and
+          strong drive to see things through completion.
+        </p>
+      </article>
+      <section id="education">
+        <h2>Education</h2>
+        <table border="">
+          <tr>
+            <th>Course</th>
+            <th>Institute</th>
+            <th>Year</th>
+            <th>Result</th>
+          </tr>
+          <tr>
+            <td>Mtech-IT</td>
+            <td>DAVV,Indore</td>
+            <td>2022</td>
+            <td>7.5 cgpa</td>
+          </tr>
+          <tr>
+            <td>12<sup>th</sup>Grade</td>
+            <td>Shri Sai Academy,Mhow</td>
+            <td>2021</td>
+            <td>73.5%</td>
+          </tr>
+          <tr>
+            <td>10<sup>th</sup>Grade</td>
+            <td>Shri Sai Academy,Mhow</td>
+            <td>2019</td>
+            <td>75%</td>
+          </tr>
+        </table>
+      </section>
+      <section id="Experience">
+        <h2>Experience</h2>
+        <p>[2020]-[2022]</p>
+        <p>Teaching Chemistry Teacher Home tuition</p>
+        <ul>
+          <li>Keeping up to date with the latest technologies information.</li>
+          <li>In school play a role of captain in cricket</li>
+          <li>Great experience of the world(Travel many places of India)</li>
+          <li>Great experiance of trading</li>
+        </ul>
+      </section>
+      <section id="intership">
+        <h2>Internships</h2>
+        <p>
+          Intership in <strong>Indore Muncipal Corparation</strong> with mayor
+        </p>
+        <p><i>Role is software engineer and website handler</i></p>
         <ul>
           <li>
-            <p>
-              Some of my project our in differnt languages is: C, C++, Python &
-              HTML
-            </p>
+            One of the great experence in IMC with mayor sir. I learn many thing
+            which change my mind-set fully.
+          </li>
+          <li>
+            I will saw the IT cell there and the entire work of indore is done
+            from there, which a grear pleasure in itself.
           </li>
         </ul>
-      </ul>
-    </section>
-    <section id="C/L">
-      <h2>Communication/Leadership</h2>
-      <ul>
-        <li>Knowing the English and Hindi language</li>
-        <li>
-          In sports like cricket, badminton, drawing, volleyball, kabaddi(And
-          all perfect in various sports).
-        </li>
-        <li>As a sport person, perfect as a leader</li>
-      </ul>
-      <hr />
-    </section>
+      </section>
+      <section id="project">
+        <h2>Projects/Skills</h2>
+        <ul>
+          <li><b>Coder</b></li>
+          <p><i>I love coding</i></p>
+          <ul>
+            <li>
+              Expert in many language like C programming, C++, Python and HTML.
+            </li>
+            <li>
+              I have learned many computer programming language, with the help
+              of which I have made many projects and in whatever language I
+              learn, I definitely make a big project, although I like Python
+              language.
+            </li>
+          </ul>
+          <br />
+          <li><b>Developer</b></li>
+          <p>
+            <i>I will develped many project</i>
+          </p>
+          <ul>
+            <li>
+              <p>
+                Some of my project our in differnt languages is: C, C++, Python
+                & HTML
+              </p>
+            </li>
+          </ul>
+        </ul>
+      </section>
+      <section id="C/L">
+        <h2>Communication/Leadership</h2>
+        <ul>
+          <li>Knowing the English and Hindi language</li>
+          <li>
+            In sports like cricket, badminton, drawing, volleyball, kabaddi(And
+            all perfect in various sports).
+          </li>
+          <li>As a sport person, perfect as a leader</li>
+        </ul>
+        <hr />
+      </section>
+    </main>
     <footer>
       <h3 id="Contact details">Contact Details</h3>
       <p><i>For more information contact me through any option</i></p>
