--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <header>
       <nav>
-        <a href="#Contact details">Contact Me</a>
-        <a href="#education">Education </a>
-        <a href="#intership">Intership </a>
-        <a href="#project">Projects</a>
-        <a href="#Experience">Experience</a>
-        <a href="#C/L">Leadership</a>
+        <li id="style">
+          <a style="color: white" href="#Contact details">Contact</a>
+          <a style="color: white" href="#education">Education </a>
+          <a style="color: white" href="#intership">Intership </a>
+          <a style="color: white" href="#project">Projects</a>
+          <a style="color: white" href="#Experience">Experience</a>
+          <a style="color: white" href="#C/L">Leadership</a>
+        </li>
       </nav>
       <br /><br />
       <img
@@ -37,7 +39,7 @@
         </p>
         <p>
           A motivated, adaptable and responsible computer user seeking a
-          position in an IT career whic will utilize the professional and
+          position in an IT career which will utilize the professional and
           techical skills developed. Customer-focused approach to work and
           strong drive to see things through completion.
         </p>
@@ -79,23 +81,31 @@
           <li>Keeping up to date with the latest technologies information.</li>
           <li>In school play a role of captain in cricket</li>
           <li>Great experience of the world(Travel many places of India)</li>
-          <li>Great experiance of trading</li>
+          <li>Great experiance of trading(Investor)</li>
         </ul>
       </section>
       <section id="intership">
         <h2>Internships</h2>
         <p>
-          Intership in <strong>Indore Muncipal Corparation</strong> with mayor
+          Intership in
+          <strong
+            ><a target="_blank" href="https://www.mpenagarpalika.gov.in/"
+              >Indore Muncipal Corparation</a
+            ></strong
+          >
+          with mayor.
         </p>
         <p><i>Role is software engineer and website handler</i></p>
         <ul>
           <li>
             One of the great experence in IMC with mayor sir. I learn many thing
-            which change my mind-set fully.
+            which change my mind-set fully. I have also the
+            <a target="_blank" href="iamge\certificate .jpg">Certificate</a> of
+            Intership.
           </li>
           <li>
             I will saw the IT cell there and the entire work of indore is done
-            from there, which a grear pleasure in itself.
+            from there, which a great pleasure in itself.
           </li>
         </ul>
       </section>
@@ -124,7 +134,12 @@
             <li>
               <p>
                 Some of my project our in differnt languages is: C, C++, Python
-                & HTML
+                &
+                <a
+                  target="_blank"
+                  href="https://harshvardhan-patidar.github.io/Resume/"
+                  >HTML</a
+                >
               </p>
             </li>
           </ul>
@@ -135,8 +150,12 @@
         <ul>
           <li>Knowing the English and Hindi language</li>
           <li>
-            In sports like cricket, badminton, drawing, volleyball, kabaddi(And
-            all perfect in various sports).
+            In sports like cricket,
+            <a target="_blank" href="iamge\certificate2.jpg">badminton</a>,
+            drawing,
+            <a target="_blank" href="iamge\certificate1.jpg">volleyball</a>,
+            <a target="_blank" href="iamge\certificate3.jpg">kabaddi</a>(And
+            also perfect in various sports).
           </li>
           <li>As a sport person, perfect as a leader</li>
         </ul>
@@ -144,13 +163,32 @@
       </section>
     </main>
     <footer>
-      <h3 id="Contact details">Contact Details</h3>
+      <h3 id="Contact details"><b>Contact Details</b></h3>
       <p><i>For more information contact me through any option</i></p>
       <p>
         <b>Email:- </b
-        ><a href="mailto:harshp18@gmail.com">harshp18@gmail.com</a>
+        ><a target="_blank" href="mailto:harshp1832004@gmail.com"
+          >harshp1832004@gmail.com</a
+        >
       </p>
-      <p><b>Intagram:- </b> patidarharsh18</p>
+      <p>
+        <b>Intagram:- </b
+        ><a
+          target="_blank"
+          href="https://instagram.com/patidarharsh18?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D"
+        >
+          patidarharsh18</a
+        >
+      </p>
+      <p>
+        <b>Snapchat:- </b
+        ><a
+          target="_blank"
+          href="https://www.snapchat.com/add/hpatidar183?share_id=PfC9oVonSW0&locale=en-GB"
+        >
+          Harsh Patidar</a
+        >
+      </p>
     </footer>
   </body>
 </html>
