--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ny Resume</title>
     <link rel="stylesheet" href="myresume.css" />
-    <link rel="shortcut icon" href="iamge\favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://github.com/Harshvardhan-Patidar/Resume/blob/main/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
