--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ny Resume</title>
     <link rel="stylesheet" href="myresume.css" />
-    <link rel="shortcut icon" href="https://github.com/Harshvardhan-Patidar/Resume/blob/main/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon .jpg" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -100,7 +100,7 @@
           <li>
             One of the great experence in IMC with mayor sir. I learn many thing
             which change my mind-set fully. I have also the
-            <a target="_blank" href="iamge\certificate .jpg">Certificate</a> of
+            <a target="_blank" href="certificate .jpg">Certificate</a> of
             Intership.
           </li>
           <li>
@@ -151,10 +151,10 @@
           <li>Knowing the English and Hindi language</li>
           <li>
             In sports like cricket,
-            <a target="_blank" href="iamge\certificate2.jpg">badminton</a>,
+            <a target="_blank" href="certificate2.jpg">badminton</a>,
             drawing,
-            <a target="_blank" href="iamge\certificate1.jpg">volleyball</a>,
-            <a target="_blank" href="iamge\certificate3.jpg">kabaddi</a>(And
+            <a target="_blank" href="certificate1.jpg">volleyball</a>,
+            <a target="_blank" href="certificate3.jpg">kabaddi</a>(And
             also perfect in various sports).
           </li>
           <li>As a sport person, perfect as a leader</li>
