--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 &
                 <a
                   target="_blank"
-                  href="https://harshvardhan-patidar.github.io/Resume/"
+                  href="https://harshvardhan-patidar.github.io/signup-page/"
                   >HTML</a
                 >
               </p>
